--- a/admin/css/user_home.less
+++ b/admin/css/user_home.less
@@ -478,6 +478,10 @@ body {
             padding: 20px 30px;
             transition: all .3s;
             position: relative;
+            
+            span{
+                text-align:center;
+            }
             .remove-class-item{
                 position: absolute;
                 cursor: pointer;
