--- a/admin/user_home.ejs
+++ b/admin/user_home.ejs
@@ -78,7 +78,7 @@
             <div class="user-home-btn-wrap">
                 <span class="user-home-btn user-home-logout">Log out</span>
                 <span class="user-home-btn user-home-getclass">Pull Class</span>
-                <span class="user-home-btn user-home-aboutus">About Us</span>
+                <span class="user-home-btn user-home-aboutus">About Me</span>
             </div>
         </div>
         <div class="user-home-content">
