--- a/admin/css/user_home.css
+++ b/admin/css/user_home.css
@@ -454,6 +454,9 @@ body {
   transition: all .3s;
   position: relative;
 }
+.pull-mask-classes .classes-wrap .classes-item span {
+  text-align: center;
+}
 .pull-mask-classes .classes-wrap .classes-item .remove-class-item {
   position: absolute;
   cursor: pointer;
@@ -463,7 +466,6 @@ body {
   font-weight: 600;
   font-size: 18px;
   transition: all .3s;
-  text-align:center;
 }
 .pull-mask-classes .classes-wrap .classes-item .remove-class-item:hover {
   font-weight: 700;
