--- a/admin/user_home.ejs
+++ b/admin/user_home.ejs
@@ -68,7 +68,7 @@
         <div class="user-home-nav">
             <div class="user-home-left">
                 <div class="user-home-avator">
-                    <span class="user-home-img">T</span>
+                    <img class="user-home-img" src="./img/menu.png">
                 </div>
                 <div class="user-home-name" id="<%=data%>">
                     Welcome user <span id="user-home-username"><%=data%></span>
