--- a/admin/css/user_home.less
+++ b/admin/css/user_home.less
@@ -174,24 +174,19 @@ body {
             align-items: flex-end;
             .user-home-avator {
                 border-radius: 50%;
-                // padding: 5px;
-                height: 40px;
-                width: 40px;
-                border: 1px solid #eee;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                margin-right: 10px;
+            // padding: 5px;
+            height: 40px;
+            width: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 20px;
                 .user-home-img {
                     box-sizing: content-box;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    font-size: 20px;
-                    padding: 5px;
-                    border-radius: 50%;
-                    color: rgba(150, 236, 22, 0.644);
-                    font-weight: 600;
+                    width: 100%;
                 }
             }
             .user-home-name {
