--- a/backstage/css/backstage.less
+++ b/backstage/css/backstage.less
@@ -1,7 +1,8 @@
 html,body{
     margin:0;
     padding: 0;
-
+    width: 100%;
+    height: 100%;
 }
 .back-stage-nav {
     box-sizing: border-box;
@@ -57,5 +58,55 @@ html,body{
                 transform: translateY(3px);
             }
         }
+    }
+}
+.back-stage-pull-mask{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    top: 0px;
+    .back-stage-pull-wrap{
+        min-width: 500px;
+        min-height: 150px;
+        height: 10%;
+        width: 30%;
+        margin:0 auto;
+        border: 1px solid #eee;
+        display: flex;
+        flex-direction: row;
+        justify-content:center;
+        align-items: center;
+        box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.18);
+        border-bottom-left-radius: 3px;
+        border-bottom-right-radius: 3px;
+        .back-stage-password-input{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            span{
+                margin-bottom: 10px;
+                font-size: 14px;
+                color: #666;
+            }
+            input{
+                outline: none;
+                border: 1px solid rgba(0, 0, 0, 0.18);
+                text-indent: 3px;
+                // font-size: 16px;
+                padding: 5px;
+                border-radius: 3px;
+                transition: all .3s;
+                box-sizing: border-box;
+                &:focus {
+                    outline: #3fc1c9;
+                    border-width: 1px !important;
+                    border-color: #3fc1c9;
+                    box-shadow: 0 0 0 2px rgba(36, 156, 185, 0.37);
+                }
+            }
+        }
+
     }
 }
