update cookie请求问题 验证码重复请求问题

--- a/admin/css/user_home.css
+++ b/admin/css/user_home.css
@@ -120,6 +120,7 @@ body {
   align-items: center;
 }
 .pull-mask .pull-modal .pull-input-wrap .checkcode .pull-img-wrap img {
+  cursor: pointer;
   margin: 0px;
   height: 100%;
   border: none;
