--- a/admin/css/user_home.less
+++ b/admin/css/user_home.less
@@ -121,6 +121,7 @@ body {
                     justify-content: center;
                     align-items: center;
                     img {
+                        cursor: pointer;
                         margin: 0px;
                         height: 100%;
                         border: none;
