--- a/backstage/css/backstage.css
+++ b/backstage/css/backstage.css
@@ -66,44 +66,77 @@ body {
   z-index: 100;
   top: 0px;
 }
-.back-stage-pull-mask .back-stage-pull-wrap {
-  min-width: 500px;
-  min-height: 150px;
+.back-stage-pull-mask form {
+  min-width: 550px;
+  min-height: 200px;
   height: 10%;
   width: 30%;
   margin: 0 auto;
+}
+.back-stage-pull-mask form .back-stage-pull-wrap {
   border: 1px solid #eee;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.18);
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
+  box-sizing: border-box;
 }
-.back-stage-pull-mask .back-stage-pull-wrap .back-stage-password-input {
+.back-stage-pull-mask form .back-stage-pull-wrap .content-wrap {
+  width: 100%;
+  box-sizing: border-box;
+}
+.back-stage-pull-mask form .back-stage-pull-wrap .back-stage-header {
+  padding: 15px 15px;
+  border-bottom: 1px solid #eee;
+}
+.back-stage-pull-mask form .back-stage-pull-wrap .back-stage-password-input {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: flex-start;
+  border-bottom: 1px solid #eee;
+  padding: 20px 20px;
 }
-.back-stage-pull-mask .back-stage-pull-wrap .back-stage-password-input span {
+.back-stage-pull-mask form .back-stage-pull-wrap .back-stage-password-input span {
   margin-bottom: 10px;
   font-size: 14px;
   color: #666;
+  margin-right: 30px;
 }
-.back-stage-pull-mask .back-stage-pull-wrap .back-stage-password-input input {
+.back-stage-pull-mask form .back-stage-pull-wrap .back-stage-password-input input {
   outline: none;
   border: 1px solid rgba(0, 0, 0, 0.18);
   text-indent: 3px;
   padding: 5px;
   border-radius: 3px;
-  transition: all .3s;
   box-sizing: border-box;
 }
-.back-stage-pull-mask .back-stage-pull-wrap .back-stage-password-input input:focus {
+.back-stage-pull-mask form .back-stage-pull-wrap .back-stage-password-input input:focus {
   outline: #3fc1c9;
   border-width: 1px !important;
   border-color: #3fc1c9;
   box-shadow: 0 0 0 2px rgba(36, 156, 185, 0.37);
+}
+.back-stage-pull-mask form .back-stage-pull-wrap .back-stage-btn-wrap {
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 10px;
+  box-sizing: border-box;
+}
+.back-stage-pull-mask form .back-stage-pull-wrap .back-stage-btn-wrap button {
+  padding: 10px 10px;
+  background-color: #FAFAFA;
+  color: #555;
+  border: 1px solid #BCBCBC;
+  border-radius: 3px;
+  cursor: pointer;
+  box-shadow: inset 0px 0px 2px rgba(255, 255, 255, 0.3);
+}
+.back-stage-pull-mask form .back-stage-pull-wrap .back-stage-btn-wrap button:hover {
+  background: linear-gradient(to bottom, #f3f3f3, #eaeaea);
 }
