--- a/backstage/css/backstage.less
+++ b/backstage/css/backstage.less
@@ -1,9 +1,10 @@
-html,body{
-    margin:0;
+html, body {
+    margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
 }
+
 .back-stage-nav {
     box-sizing: border-box;
     width: 100%;
@@ -14,6 +15,7 @@ html,body{
     justify-content: space-between;
     align-items: flex-end;
     min-width: 1000px;
+   
     .back-stage-left {
         display: flex;
         justify-content: center;
@@ -60,55 +62,90 @@ html,body{
         }
     }
 }
-.back-stage-pull-mask{
+
+.back-stage-pull-mask {
     position: relative;
     width: 100%;
     height: 100%;
     z-index: 100;
     top: 0px;
-    .back-stage-pull-wrap{
-        min-width: 500px;
-        min-height: 150px;
+    form{
+        min-width: 550px;
+        // height: ;
+        min-height: 200px;
         height: 10%;
         width: 30%;
-        margin:0 auto;
-        border: 1px solid #eee;
-        display: flex;
-        flex-direction: row;
-        justify-content:center;
-        align-items: center;
-        box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.18);
-        border-bottom-left-radius: 3px;
-        border-bottom-right-radius: 3px;
-        .back-stage-password-input{
+        margin: 0 auto;
+        .back-stage-pull-wrap {
+       
+            border: 1px solid #eee;
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start;
             align-items: flex-start;
-            span{
-                margin-bottom: 10px;
-                font-size: 14px;
-                color: #666;
-            }
-            input{
-                outline: none;
-                border: 1px solid rgba(0, 0, 0, 0.18);
-                text-indent: 3px;
-                // font-size: 16px;
-                padding: 5px;
-                border-radius: 3px;
-                transition: all .3s;
+            box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.18);
+            border-bottom-left-radius: 3px;
+            border-bottom-right-radius: 3px;
+            box-sizing: border-box;
+            .content-wrap {
+                width: 100%;
                 box-sizing: border-box;
-                &:focus {
-                    outline: #3fc1c9;
-                    border-width: 1px !important;
-                    border-color: #3fc1c9;
-                    box-shadow: 0 0 0 2px rgba(36, 156, 185, 0.37);
+            }
+            .back-stage-header {
+                padding: 15px 15px;
+                border-bottom: 1px solid #eee;
+            }
+            .back-stage-password-input {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: flex-start;
+                border-bottom: 1px solid #eee;
+                padding: 20px 20px;
+                span {
+                    margin-bottom: 10px;
+                    font-size: 14px;
+                    color: #666;
+                    margin-right: 30px;
+                }
+                input {
+                    outline: none;
+                    border: 1px solid rgba(0, 0, 0, 0.18);
+                    text-indent: 3px;
+                    // font-size: 16px;
+                    padding: 5px;
+                    border-radius: 3px;
+                    // transition: all .3s;
+                    box-sizing: border-box;
+                    &:focus {
+                        outline: #3fc1c9;
+                        border-width: 1px !important;
+                        border-color: #3fc1c9;
+                        box-shadow: 0 0 0 2px rgba(36, 156, 185, 0.37);
+                    }
+                }
+            }
+            .back-stage-btn-wrap {
+                height: 100%;
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                padding: 10px 10px;
+                box-sizing: border-box;
+                button {
+                    padding: 10px 10px;
+                    background-color: #FAFAFA;
+                    color: #555;
+                    border: 1px solid #BCBCBC;
+                    border-radius: 3px;
+                    cursor: pointer;
+                    box-shadow: inset 0px 0px 2px rgba(255, 255, 255, 0.3);
+                    &:hover {
+                        background: linear-gradient(to bottom, #f3f3f3, #eaeaea);
+                    }
                 }
             }
         }
-        .back-stage-btn-wrap{
-            
-        }
     }
+  
 }
