--- a/backstage/css/backstage.less
+++ b/backstage/css/backstage.less
@@ -15,7 +15,6 @@ html, body {
     justify-content: space-between;
     align-items: flex-end;
     min-width: 1000px;
-   
     .back-stage-left {
         display: flex;
         justify-content: center;
@@ -69,7 +68,7 @@ html, body {
     height: 100%;
     z-index: 100;
     top: 0px;
-    form{
+    form {
         min-width: 550px;
         // height: ;
         min-height: 200px;
@@ -77,7 +76,6 @@ html, body {
         width: 30%;
         margin: 0 auto;
         .back-stage-pull-wrap {
-       
             border: 1px solid #eee;
             display: flex;
             flex-direction: column;
@@ -147,5 +145,65 @@ html, body {
             }
         }
     }
-  
+}
+
+.back-stage-wrap {
+    width: 100%;
+    // height: 80%;
+    min-width: 1000px;
+    // min-height: 500px;
+    table {
+        width: 80%;
+        margin: 0 auto;
+        margin-top: 130px;
+        background: #FFF;
+        font-size: 12px;
+        border-top: 1px solid #E1E6EB;
+        border: 1px solid #E1E6EB;
+        border-spacing: 0;
+        thead {
+            font-weight: normal;
+            color: #999;
+            border-bottom: 1px solid #E1E6EB;
+            background-color: #F5F6FA;
+            tr {
+                background-color: #F5F6FA;
+                .checkbox {
+                    // width: 100px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                th {
+                    text-align: left;
+                    padding: 10px 30px;
+                    background-color: #F5F6FA;
+                    font-size: 12px;
+                    font-weight: 300;
+                }
+            }
+        }
+        tbody {
+            tr {
+                .checkbox {
+                    // width: 100px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                td {
+                    text-align: left;
+                    padding: 10px 30px;
+                    a{
+                        color: #06C;;
+                        text-decoration: none;
+                        &:hover{
+                            color: #2a6496;
+                            text-decoration: underline;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
