--- a/backstage/css/backstage.css
+++ b/backstage/css/backstage.css
@@ -144,10 +144,189 @@ body {
   width: 100%;
   min-width: 1000px;
 }
+.back-stage-wrap .back-stage-wrap-top {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-top-title {
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-top-title .back-stage-title-text span {
+  margin: 0;
+  font-size: 28px;
+  line-height: 32px;
+  border-left: none;
+  text-indent: 0;
+  color: #111;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-top-title .back-stage-btn-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-top-title .back-stage-btn-wrap button {
+  height: 35px;
+  padding: 2px 15px;
+  box-sizing: border-box;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-top-title .back-stage-btn-wrap .update-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 20px;
+  color: #333;
+  border: 1px solid #ddd;
+  background-color: #F7F7F7;
+  outline: none;
+  cursor: pointer;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-top-title .back-stage-btn-wrap .update-btn img {
+  height: 20px;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-top-title .back-stage-btn-wrap .update-btn:focus {
+  color: #333;
+  border: 1px solid #ddd;
+  background-color: #F7F7F7;
+  outline: none;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-top-title .back-stage-btn-wrap .update-btn:hover {
+  color: #333;
+  border: 1px solid #ddd;
+  background-color: #fff;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-top-title .back-stage-btn-wrap .update-btn:active {
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.125);
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-top-title .back-stage-btn-wrap .create-btn {
+  color: #fff;
+  border: 1px solid #0070CC;
+  background-color: #0070CC;
+  cursor: pointer;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  height: 30px;
+  margin: 30px 0;
+  border: 1px solid #eee;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap {
+  height: 30px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  position: relative;
+  box-sizing: border-box;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap .back-stage-down-wrap {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  box-sizing: border-box;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap .back-stage-down-wrap img {
+  height: 100%;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap .back-stage-down-wrap img:hover {
+  opacity: 1;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap .down-list {
+  display: none;
+  position: absolute;
+  top: 30px;
+  left: -1px;
+  margin: 0;
+  list-style: none;
+  min-width: 160px;
+  background-color: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-clip: padding-box;
+  font-size: 12px;
+  border-radius: 0;
+  padding: 0;
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap .down-list .item {
+  color: #333;
+  text-align: left;
+  padding-left: 16px;
+  padding-right: 8px;
+  height: 28px;
+  line-height: 26px;
+  white-space: nowrap;
+  cursor: pointer;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap .down-list .item:hover {
+  background-color: #f5f5f5;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap .back-stage-search-span-input {
+  width: 400px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  box-sizing: border-box;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap .back-stage-search-span-input span {
+  height: 30px;
+  font-size: 12px;
+  line-height: 30px;
+  white-space: nowrap;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap .back-stage-search-span-input input {
+  height: 30px;
+  box-sizing: border-box;
+  border: none;
+  width: 100%;
+  outline: none;
+  text-indent: 1em;
+  padding: 0px;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap button {
+  height: 30px;
+  color: #333;
+  border: none;
+  border-left: 1px solid #eee;
+  padding: 0 10px;
+  background-color: #F7F7F7;
+  box-sizing: border-box;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap button:focus {
+  color: #333;
+  border: 1px solid #ddd;
+  background-color: #F7F7F7;
+  outline: none;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap button:hover {
+  color: #333;
+  border: 1px solid #ddd;
+  background-color: #fff;
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap button:active {
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.125);
+}
+.back-stage-wrap .back-stage-wrap-top .back-stage-search-wrap .back-stage-search-input-wrap button img {
+  height: 20px;
+}
 .back-stage-wrap table {
   width: 80%;
   margin: 0 auto;
-  margin-top: 130px;
   background: #FFF;
   font-size: 12px;
   border-top: 1px solid #E1E6EB;
