--- a/backstage/css/backstage.less
+++ b/backstage/css/backstage.less
@@ -152,10 +152,197 @@ html, body {
     // height: 80%;
     min-width: 1000px;
     // min-height: 500px;
+    .back-stage-wrap-top {
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-direction: column;
+        .back-stage-top-title {
+            width: 100%;
+            margin-top: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: row;
+            .back-stage-title-text {
+                span {
+                    margin: 0;
+                    font-size: 28px;
+                    line-height: 32px;
+                    border-left: none;
+                    text-indent: 0;
+                    color: #111;
+                }
+            }
+            .back-stage-btn-wrap {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: row;
+                button {
+                    // padding: 10px 15px;
+                    height: 35px;
+                    padding: 2px 15px;
+                    box-sizing: border-box;
+                }
+                .update-btn {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin-right: 20px;
+                    color: #333;
+                    border: 1px solid #ddd;
+                    background-color: #F7F7F7;
+                    outline: none;
+                    cursor: pointer;
+                    img {
+                        height: 20px;
+                    }
+                    &:focus {
+                        color: #333;
+                        border: 1px solid #ddd;
+                        background-color: #F7F7F7;
+                        outline: none;
+                    }
+                    &:hover {
+                        color: #333;
+                        border: 1px solid #ddd;
+                        background-color: #fff;
+                    }
+                    &:active {
+                        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.125);
+                    }
+                }
+                .create-btn {
+                    color: #fff;
+                    border: 1px solid #0070CC;
+                    background-color: #0070CC;
+                    cursor: pointer;
+                }
+            }
+        }
+        .back-stage-search-wrap {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            height: 30px;
+            margin: 30px 0;
+            border: 1px solid #eee;
+            .back-stage-search-input-wrap {
+                height: 30px;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                flex-direction: row;
+                position: relative;
+                box-sizing: border-box;
+                .back-stage-down-wrap {
+                    height: 100%;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 5px;
+                    box-sizing: border-box;
+                    img {
+                        height: 100%;
+                        opacity: 0.5;
+                        cursor: pointer;
+                        &:hover {
+                            opacity: 1;
+                        }
+                    }
+                }
+                .down-list {
+                    display: none;
+                    position: absolute;
+                    top: 30px;
+                    left: -1px;
+                    margin: 0;
+                    padding: 0;
+                    list-style: none;
+                    min-width: 160px;
+                    background-color: #ffffff;
+                    border: 1px solid rgba(0, 0, 0, 0.1);
+                    background-clip: padding-box;
+                    font-size: 12px;
+                    border-radius: 0;
+                    padding: 0;
+                    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.1);
+                    .item {
+                        color: #333;
+                        text-align: left;
+                        padding-left: 16px;
+                        padding-right: 8px;
+                        height: 28px;
+                        line-height: 26px;
+                        white-space: nowrap;
+                        cursor: pointer;
+                        &:hover{
+                            background-color: #f5f5f5;
+                        }
+                    }
+                }
+                .back-stage-search-span-input{
+                    width:400px;
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: center;
+                    flex-direction: row;
+                    box-sizing: border-box;
+                    // height: 30px;
+                    span{
+                        height: 30px;
+                        font-size: 12px;
+                        line-height: 30px;
+                        white-space: nowrap;
+                    }
+                    input {
+                        height: 30px;
+                        box-sizing: border-box;
+                        border: none;
+                        width:100%;
+                        outline: none;
+                        text-indent: 1em;
+                        padding: 0px;
+                    }
+                }
+               
+                button {
+                    height: 30px;
+                    color: #333;
+                    // border: 1px solid #ddd;
+                    border: none;
+                    border-left: 1px solid #eee;
+                    padding: 0 10px;
+                    background-color: #F7F7F7;
+                    box-sizing: border-box;
+                    &:focus {
+                        color: #333;
+                        border: 1px solid #ddd;
+                        background-color: #F7F7F7;
+                        outline: none;
+                    }
+                    &:hover {
+                        color: #333;
+                        border: 1px solid #ddd;
+                        background-color: #fff;
+                    }
+                    &:active {
+                        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.125);
+                    }
+                    img {
+                        height: 20px;
+                    }
+                }
+            }
+        }
+    }
     table {
         width: 80%;
         margin: 0 auto;
-        margin-top: 130px;
+        // margin-top: 130px;
         background: #FFF;
         font-size: 12px;
         border-top: 1px solid #E1E6EB;
@@ -194,10 +381,11 @@ html, body {
                 td {
                     text-align: left;
                     padding: 10px 30px;
-                    a{
-                        color: #06C;;
+                    a {
+                        color: #06C;
+                        ;
                         text-decoration: none;
-                        &:hover{
+                        &:hover {
                             color: #2a6496;
                             text-decoration: underline;
                         }
