--- a/backstage/css/backstage.css
+++ b/backstage/css/backstage.css
@@ -143,6 +143,7 @@ body {
 .back-stage-wrap {
   width: 100%;
   min-width: 1000px;
+  filter: blur(3px);
 }
 .back-stage-wrap .back-stage-wrap-top {
   width: 80%;
@@ -354,20 +355,71 @@ body {
   font-size: 12px;
   font-weight: 300;
 }
+.back-stage-wrap table tbody tr td {
+  text-align: left;
+  padding: 10px 30px;
+  width: 300px;
+  height: 50px;
+  box-sizing: border-box;
+}
+.back-stage-wrap table tbody tr td .td-input {
+  outline: none;
+  border: 1px solid #ccc;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 4px 10px;
+  font-size: 12px;
+  border-radius: 2px;
+}
+.back-stage-wrap table tbody tr td span {
+  color: #06C;
+  cursor: pointer;
+  text-decoration: none;
+}
+.back-stage-wrap table tbody tr td span:hover {
+  color: #2a6496;
+  text-decoration: underline;
+}
 .back-stage-wrap table tbody tr .checkbox {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
-.back-stage-wrap table tbody tr td {
-  text-align: left;
-  padding: 10px 30px;
+.back-stage-loading {
+  display: block;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  height: 100%;
+  width: 100%;
+  background-color: #F7F7F7;
+  opacity: 0.5;
 }
-.back-stage-wrap table tbody tr td a {
-  color: #06C;
-  text-decoration: none;
+.back-stage-loading .back-loading-bcg {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.back-stage-wrap table tbody tr td a:hover {
-  color: #2a6496;
-  text-decoration: underline;
+.back-stage-loading .back-loading-bcg img {
+  z-index: 2px;
+}
+.tips {
+  display: none;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.tips span {
+  color: #df5f5f;
+  border: 1px solid #df5f5f;
+  background-color: white;
+  padding: 10px 20px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
