--- a/backstage/css/backstage.less
+++ b/backstage/css/backstage.less
@@ -151,6 +151,7 @@ html, body {
     width: 100%;
     // height: 80%;
     min-width: 1000px;
+    filter: blur(3px);
     // min-height: 500px;
     .back-stage-wrap-top {
         width: 80%;
@@ -279,20 +280,20 @@ html, body {
                         line-height: 26px;
                         white-space: nowrap;
                         cursor: pointer;
-                        &:hover{
+                        &:hover {
                             background-color: #f5f5f5;
                         }
                     }
                 }
-                .back-stage-search-span-input{
-                    width:400px;
+                .back-stage-search-span-input {
+                    width: 400px;
                     display: flex;
                     justify-content: flex-start;
                     align-items: center;
                     flex-direction: row;
                     box-sizing: border-box;
                     // height: 30px;
-                    span{
+                    span {
                         height: 30px;
                         font-size: 12px;
                         line-height: 30px;
@@ -302,13 +303,12 @@ html, body {
                         height: 30px;
                         box-sizing: border-box;
                         border: none;
-                        width:100%;
+                        width: 100%;
                         outline: none;
                         text-indent: 1em;
                         padding: 0px;
                     }
                 }
-               
                 button {
                     height: 30px;
                     color: #333;
@@ -372,18 +372,27 @@ html, body {
         }
         tbody {
             tr {
-                .checkbox {
-                    // width: 100px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                }
+                
                 td {
                     text-align: left;
                     padding: 10px 30px;
-                    a {
+                    width: 300px;
+                    height: 50px;
+                    box-sizing: border-box;
+                    .td-input {
+                        outline: none;
+                        border: 1px solid #ccc;
+                        width: 100%;
+                        // height: 100%;
+                        // text-indent: 1em;
+                        box-sizing: border-box;
+                        padding: 4px 10px;
+                        font-size: 12px;
+                        border-radius: 2px;
+                    }
+                    span {
                         color: #06C;
-                        ;
+                        cursor: pointer;
                         text-decoration: none;
                         &:hover {
                             color: #2a6496;
@@ -391,7 +400,53 @@ html, body {
                         }
                     }
                 }
+                .checkbox {
+                    // width: 100px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 100%;
+                }
             }
         }
+    }
+}
+
+.back-stage-loading {
+    display: block;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: #F7F7F7;
+    opacity: 0.5;
+    .back-loading-bcg {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            z-index: 2px;
+        }
+    }
+}
+
+.tips {
+    display: none;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.1);
+    span {
+        color: rgb(223, 95, 95);
+        border: 1px solid rgb(223, 95, 95);
+        background-color: white;
+        padding: 10px 20px;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     }
 }
