--- a/backstage/css/backstage.less
+++ b/backstage/css/backstage.less
@@ -399,6 +399,36 @@ html, body {
                             text-decoration: underline;
                         }
                     }
+                    .btn-wrap{
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items: center;
+                        flex-direction: row;
+                        button{
+                            padding: 8px 16px;
+                            margin-right: 5px;
+                            font-size: 12px;
+                        }
+                        .selected-btn-default{
+                            text-shadow: none;
+                            filter: none;
+                            opacity: 1;
+                            color: #bbb;
+                            border: 1px solid #ddd;
+                            background-color: #F7F7F7;
+                        }
+                        .selected-btn-active{
+                            color: #333;
+                            border: 1px solid #ddd;
+                            background-color: #F7F7F7;
+                            font-size: 12px;
+                            border-radius: 0px;
+                            padding: 8px 16px;
+                            height: 32px;
+                            line-height: 14px;
+
+                        }
+                    }
                 }
                 .checkbox {
                     // width: 100px;
