--- a/backstage/css/backstage.css
+++ b/backstage/css/backstage.css
@@ -380,6 +380,35 @@ body {
   color: #2a6496;
   text-decoration: underline;
 }
+.back-stage-wrap table tbody tr td .btn-wrap {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+}
+.back-stage-wrap table tbody tr td .btn-wrap button {
+  padding: 8px 16px;
+  margin-right: 5px;
+  font-size: 12px;
+}
+.back-stage-wrap table tbody tr td .btn-wrap .selected-btn-default {
+  text-shadow: none;
+  filter: none;
+  opacity: 1;
+  color: #bbb;
+  border: 1px solid #ddd;
+  background-color: #F7F7F7;
+}
+.back-stage-wrap table tbody tr td .btn-wrap .selected-btn-active {
+  color: #333;
+  border: 1px solid #ddd;
+  background-color: #F7F7F7;
+  font-size: 12px;
+  border-radius: 0px;
+  padding: 8px 16px;
+  height: 32px;
+  line-height: 14px;
+}
 .back-stage-wrap table tbody tr .checkbox {
   display: flex;
   justify-content: center;
